--- a/welcomes/from-data.html
+++ b/welcomes/from-data.html
@@ -11,8 +11,8 @@
   <thead>
     <tr>
       <th data-field="id">ID</th>
-      <th data-field="name">Item Name</th>
-      <th data-field="price">Item Price</th>
+      <th data-field="name" data-sortable="true">Item Name</th>
+      <th data-field="price" data-sortable="true">Item Price</th>
     </tr>
   </thead>
 </table>
