Adding dummy html files for generators

--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
             <ul class="nav bd-sidenav">
               <li><a href="#welcome.html">Index</a></li>
               <li><a href="#welcomes/from-html.html">From HTML</a></li>
-              <li><a href="#welcomes/from-data.html">From Data</a></li>
+              <li><a href="#welcomes/wmt20-zh-en.html">wmt20-zh-en</a></li>
+              <li><a href="#welcomes/wmt20-en-de.html">wmt20-en-de</a></li>
+              <li><a href="#welcomes/mscoco.html">mscoco</a></li>
+              <li><a href="#welcomes/cnndm.html">cnndm</a></li>
               <li><a href="#welcomes/from-url.html">From URL</a></li>
               <li><a href="#welcomes/no-data.html">No Data</a></li>
               <li data-show=""><a href="#welcomes/modal-table.html">Modal Table</a></li>
