moving some stuff around + initial section

--- a/index.html
+++ b/index.html
@@ -130,29 +130,12 @@
 
         <nav class="collapse bd-links" id="bd-docs-nav">
           <div class="bd-toc-item">
-            <a class="bd-toc-link" href="#welcome.html">Welcome</a>
+            <a class="bd-toc-link" href="#welcome.html">test section</a>
             <ul class="nav bd-sidenav">
-              <li><a href="#welcome.html">Index</a></li>
-              <li><a href="#welcomes/from-html.html">From HTML</a></li>
-              <li><a href="#welcomes/wmt20-zh-en.html">wmt20-zh-en</a></li>
-              <li><a href="#welcomes/wmt20-en-de.html">wmt20-en-de</a></li>
-              <li><a href="#welcomes/mscoco.html">mscoco</a></li>
-              <li><a href="#welcomes/cnndm.html">cnndm</a></li>
-              <li><a href="#welcomes/from-url.html">From URL</a></li>
-              <li><a href="#welcomes/no-data.html">No Data</a></li>
-              <li data-show=""><a href="#welcomes/modal-table.html">Modal Table</a></li>
-              <li data-show="bootstrap5"><a href="#welcomes/modal-table-bootstrap5.html">Modal Table</a></li>
-              <li data-show="bootstrap3"><a href="#welcomes/modal-table-bootstrap3.html">Modal Table</a></li>
-              <li data-show="semantic"><a href="#welcomes/modal-table-semantic.html">Modal Table</a></li>
-              <li data-show="bulma"><a href="#welcomes/modal-table-bulma.html">Modal Table</a></li>
-              <li data-show="materialize"><a href="#welcomes/modal-table-materialize.html">Modal Table</a></li>
-              <li data-show="foundation"><a href="#welcomes/modal-table-foundation.html">Modal Table</a></li>
-              <li><a href="#welcomes/group-columns.html">Group Columns</a></li>
-              <li><a href="#welcomes/sub-table.html">Sub Table</a></li>
-              <li><a href="#welcomes/multiple-table.html">Multiple Table</a></li>
-              <li><a href="#welcomes/flat-json.html">Flat Json</a></li>
-              <li><a href="#welcomes/large-data.html">Large Data</a></li>
-              <li><a href="#welcomes/vue-component.html">Vue Component</a></li>
+              <li><a href="#tasks/wmt20-zh-en/generators.html">wmt20-zh-en</a></li>
+              <li><a href="#tasks/wmt20-en-de/generators.html">wmt20-en-de</a></li>
+              <li><a href="#tasks/mscoco/generators.html">mscoco</a></li>
+              <li><a href="#tasks/cnndm/generators.html">cnndm</a></li>
             </ul>
           </div>
 
